--- a/public/chatbot.html
+++ b/public/chatbot.html
@@ -106,6 +106,7 @@
         <a href="Home.html"><i class="fa-solid fa-graduation-cap"></i></a>
         <a href="profile.html"><i class="fa-solid fa-user"></i></a>
         <a href="chatbot.html" class="active"><i class="fa-solid fa-comments"></i></a>
+        <a href="weekly-quiz.html"><i class="fa-solid fa-user"></i></a>
     </nav>
 </div>
 
