--- a/public/chatbot.html
+++ b/public/chatbot.html
@@ -72,22 +72,21 @@
 
 <div class="app">
     <header>
-        <i id="modeToggle" class="fa-solid fa-moon"></i>
-        <i id="clearChat" class="fa-solid fa-trash"></i>
-        <img src="logo.png" alt="شعار المعهد" class="logo">
-        <h1>المساعد الذكي</h1>
-        <p>معهد رعاية الضبعية – التمريض</p>
-        <div class="online"><i class="fa-solid fa-circle"></i> متصل الآن</div>
-    </header>
+    <i id="modeToggle" class="fa-solid fa-moon"></i>
+    <i id="clearChat" class="fa-solid fa-trash"></i>
+    <img src="logo.png" alt="شعار المعهد" class="logo">
+    <h1>نور – مساعدتك الشخصية</h1>
+    <p>معهد رعاية الضبعية – التمريض</p>
+    <div class="online"><i class="fa-solid fa-circle"></i> متصلة دلوقتي</div>
+</header>
 
-    <main id="chat" class="chat">
-        <div class="welcome">
-            <h2>مرحباً بكِ يا قمر</h2>
-            <p>أنا مساعدك الذكي — جاهزة أساعدك في الدراسة، الواجبات، النتايج، أو حتى لو بس عايزة تفضفضي</p>
-            <small>كل حاجة بينا في السر</small>
-        </div>
-    </main>
-
+<main id="chat" class="chat">
+    <div class="welcome">
+        <h2>أهلاً يا قمر، أنا نور</h2>
+        <p>أي حاجة عايزاها… دراسة، نتايج، واجبات، أو حتى لو بس عايزة تفضفضي وتضحكي شوية، أنا هنا ليكِ يا روحي</p>
+        <small>كل حاجة بينا في السر يا حبيبتي</small>
+    </div>
+</main>
     <div class="suggestions">
         <div>ما نتيجة الترم؟</div>
         <div>جدول الامتحانات</div>
