--- a/public/chatbot.html
+++ b/public/chatbot.html
@@ -173,7 +173,7 @@
         typing();
 
         try {
-            const res = await fetch(GEMINI_API, {
+            const res = await fetch(DEEPSEEK_API, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ prompt: q })
