--- a/public/developer.html
+++ b/public/developer.html
@@ -116,31 +116,75 @@
         }
 
         nav{
-            position:fixed;
-            bottom:0;
-            left:50%;
-            transform:translateX(-50%);
-            width:100%;
-            max-width:650px;
-            height:80px;
-            background:var(--nav-bg);
-            display:flex;
-            justify-content:space-around;
-            align-items:center;
-            border-top:1px solid rgba(0,0,0,.08);
-            box-shadow:0 -5px 20px rgba(0,0,0,.1);
-        }
-        nav a{
-            color:var(--gold-dark);
-            font-size:1.6rem;
-            padding:12px;
-            border-radius:15px;
-            transition:.3s;
-        }
-        nav a:hover{
-            background:var(--gold-dark);
-            color:#fff;
-        }
+    position:fixed;
+    bottom:0;
+    left:50%;
+    transform:translateX(-50%);
+    width:100%;
+    max-width:650px;
+    height:80px;
+    background:var(--nav-bg,#fff);
+    display:flex;
+    justify-content:space-around;
+    align-items:center;
+    border-top:3px solid #d4af37;
+    box-shadow:0 -8px 30px rgba(0,0,0,0.2);
+    border-top-left-radius:24px;
+    border-top-right-radius:24px;
+    z-index:9999;
+    padding-bottom:10px;
+}
+body.dark nav{
+    background:#1c1c1c;
+    border-top-color:#d4af37;
+}
+nav::before{
+    content:'';
+    position:absolute;
+    top:-30px;
+    left:50%;
+    transform:translateX(-50%);
+    width:120px;
+    height:60px;
+    background:#d4af37;
+    border-radius:50%;
+    opacity:0.15;
+    filter:blur(25px);
+}
+nav a{
+    color:#d4af37;
+    font-size:1.7rem;
+    padding:14px;
+    background:rgba(212,175,55,0.1);
+    border-radius:50%;
+    transition:all .4s ease;
+    position:relative;
+    backdrop-filter:blur(10px);
+}
+nav a:hover{
+    background:#d4af37;
+    color:#fff;
+    transform:translateY(-5px);
+    box-shadow:0 10px 25px rgba(212,175,55,0.5);
+}
+nav a.active{
+    background:#d4af37 !important;
+    color:#fff !important;
+    transform:translateY(-15px) scale(1.2);
+    box-shadow:0 12px 30px rgba(212,175,55,0.7);
+}
+nav a.active::after{
+    content:'';
+    position:absolute;
+    bottom:-12px;
+    left:50%;
+    transform:translateX(-50%);
+    width:8px;
+    height:8px;
+    background:#d4af37;
+    border-radius:50%;
+    box-shadow:0 0 25px #d4af37;
+}
     </style>
 </head>
 <body>
