--- a/public/developer.html
+++ b/public/developer.html
@@ -176,7 +176,7 @@
         <div class="ch"><h2>من أنا؟</h2></div>
         <div class="content">
             <p class="text">
-                أنا أحمد موسى، مطور ويب مصري من المنصورة، قمت ببرمجة وتصميم نظام SchoolX من الصفر بكل حب وعناية لخدمة طلاب وطالبات معهد رعاية الضبعية للتمريض.
+                أنا أحمد موسى، مطور ويب مصري من الأقصر، قمت ببرمجة وتصميم نظام SchoolX من الصفر بكل حب وعناية لخدمة طلاب وطالبات معهد رعاية الضبعية للتمريض.
             </p>
         </div>
     </div>
