--- a/public/admin.html
+++ b/public/admin.html
@@ -11,66 +11,71 @@
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7676282531413677"
      crossorigin="anonymous"></script>
-    <style>
-    /* الهامبرجر منيو + القايمة الجانبية - تصميم فخم جدًا */
+   <style>
+    /* القايمة الجانبية الجديدة - تصميم رسمي زي المعهد بالظبط */
     .hamburger{
         position:fixed;top:18px;left:18px;z-index:9999;
         background:#d4af37;color:#000;padding:12px 16px;border-radius:50%;
         font-size:1.6rem;cursor:pointer;box-shadow:0 6px 20px rgba(212,175,55,0.6);
-        border:none;transition:all 0.4s;font-weight:900;
+        border:3px solid #fff;transition:all 0.4s;font-weight:900;
     }
-    .hamburger:hover{background:#ffc107;transform:rotate(90deg) scale(1.1);}
+    .hamburger:hover{background:#ffc107;border-color:#000;transform:scale(1.1);}
 
     .sidebar{
-        position:fixed;top:0;right:-340px;width:340px;height:100%;background:#1a2526;
-        box-shadow:-15px 0 40px rgba(0,0,0,0.8);transition:right 0.5s ease;z-index:9998;
-        padding:25px;overflow-y:auto;border-left:6px solid #d4af37;
+        position:fixed;top:0;right:-300px;width:300px;height:100%;background:#fff;
+        box-shadow:-10px 0 30px rgba(0,0,0,0.3);transition:right 0.4s ease;z-index:9998;
+        padding:0;overflow-y:auto;border-left:6px solid #d4af37;
     }
     .sidebar.active{right:0;}
 
     .sidebar-header{
-        text-align:center;padding:25px 0;border-bottom:3px solid #d4af37;margin-bottom:25px;
+        background:#006633;color:#fff;padding:20px;text-align:center;
+        border-bottom:4px double #d4af37;
     }
-    .sidebar-header h2{color:#d4af37;font-size:1.8rem;font-weight:900;}
+    .sidebar-header h2{font-size:1.6rem;font-weight:900;margin:10px 0;}
+    .sidebar-header p{font-size:0.95rem;opacity:0.9;}
 
     .sidebar-menu a{
-        display:block;padding:20px 25px;color:#fff;font-size:1.4rem;
-        border-bottom:1px solid #333333;transition:0.3s;border-radius:12px;
-        margin:10px 15px;background:rgba(255,255,255,0.05);
+        display:block;padding:18px 25px;color:#000;font-size:1.35rem;
+        border-bottom:1px solid #ddd;transition:0.3s;font-weight:600;
+        background:#f8f9fa;
     }
     .sidebar-menu a:hover{
-        background:#d4af37;color:#000;font-weight:900;transform:translateX(-10px);
+        background:#d4af37;color:#fff;font-weight:900;padding-left:35px;
     }
-    .sidebar-menu a i{margin-left:15px;}
+    .sidebar-menu a i{margin-left:12px;color:#006633;}
+    .sidebar-menu a:hover i{color:#fff;}
 
     .overlay{
-        position:fixed;inset:0;background:rgba(0,0,0,0.8);opacity:0;
+        position:fixed;inset:0;background:rgba(0,0,0,0.7);opacity:0;
         visibility:hidden;transition:0.4s;z-index:9997;
     }
     .overlay.active{opacity:1;visibility:visible;}
 
     @media (max-width:480px){
-        .sidebar{width:300px;right:-300px;}
+        .sidebar{width:280px;right:-280px;}
         .hamburger{top:12px;left:12px;font-size:1.4rem;padding:10px;}
+        .sidebar-menu a{font-size:1.25rem;padding:16px 20px;}
     }
-</style>
+        </style>
 </head>
 <body>
     <!-- الهامبرجر منيو -->
 <button class="hamburger" id="hamburgerBtn">☰</button>
 
-<!-- القايمة الجانبية -->
+<!-- القايمة الجانبية الرسمية -->
 <div class="sidebar" id="adminSidebar">
     <div class="sidebar-header">
-        <h2>قائمة الأدمن</h2>
+        <h2>لوحة تحكم الأدمن</h2>
+        <p>معهد رعاية الضبعية للتمريض - فرع بورسعيد</p>
     </div>
     <div class="sidebar-menu">
-        <a href="admin.html"><i class="fas fa-tachometer-alt"></i> لوحة التحكم الرئيسية</a>
-        <a href="certificate.html"><i class="fas fa-certificate"></i> إصدار شهادة تقدير</a>
-        <a href="exams.html"><i class="fas fa-file-alt"></i> إدارة الامتحانات</a>
-        <a href="notifications.html"><i class="fas fa-bell"></i> إرسال إشعارات</a>
-        <a href="Home.html"><i class="fas fa-home"></i> الصفحة الرئيسية</a>
-        <a href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> تسجيل الخروج</a>
+        <a href="admin.html">لوحة التحكم الرئيسية</a>
+        <a href="certificate.html">إصدار شهادة تقدير</a>
+        <a href="exams.html">إدارة الامتحانات</a>
+        <a href="notifications.html">إرسال إشعارات</a>
+        <a href="Home.html">الصفحة الرئيسية</a>
+        <a href="#" onclick="logout()">تسجيل الخروج</a>
     </div>
 </div>
 
@@ -369,25 +374,25 @@
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'947cc960f9459a73',t:'MTc0ODU5Mjk1Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
     <script>
-// الهامبرجر منيو - فتح وإغلاق
-document.getElementById('hamburgerBtn').addEventListener('click', function() {
+// فتح وإغلاق القايمة
+document.getElementById('hamburgerBtn').onclick = function() {
     document.getElementById('adminSidebar').classList.toggle('active');
     document.getElementById('overlay').classList.toggle('active');
-});
+};
 
-document.getElementById('overlay').addEventListener('click', function() {
+document.getElementById('overlay').onclick = function() {
     document.getElementById('adminSidebar').classList.remove('active');
     document.getElementById('overlay').classList.remove('active');
-});
+};
 
-// إغلاق القايمة لما نضغط على لينك (خصوصًا على الموبايل)
-document.querySelectorAll('.sidebar-menu a').forEach(link => {
-    link.addEventListener('click', () => {
+// إغلاق تلقائي على الموبايل
+document.querySelectorAll('.sidebar-menu a').forEach(a => {
+    a.onclick = () => {
         if (window.innerWidth <= 768) {
             document.getElementById('adminSidebar').classList.remove('active');
             document.getElementById('overlay').classList.remove('active');
         }
-    });
+    };
 });
 </script>
 </body>
