--- a/public/admin.html
+++ b/public/admin.html
@@ -67,7 +67,7 @@
 <div class="sidebar" id="adminSidebar">
     <div class="sidebar-header">
         <h2>لوحة تحكم الأدمن</h2>
-        <p>معهد رعاية الضبعية للتمريض - فرع بورسعيد</p>
+        <p>معهد رعاية الضبعية للتمريض - فرع الأقصر </p>
     </div>
     <div class="sidebar-menu">
         <a href="admin.html">لوحة التحكم الرئيسية</a>
