--- a/public/login.html
+++ b/public/login.html
@@ -30,7 +30,12 @@
             <p style="text-align: center; margin-top: 15px;">
                 ليس لديك حساب؟ <a href="signup.html" class="signup-link">إنشاء حساب</a>
             </p>
-
+<p style="text-align: center; margin-top: 20px; color: #94a3b8;">
+    ولي أمر؟ 
+    <a href="parent-login.html" class="signup-link" style="color: #d4af37; font-weight: bold;">
+        تسجيل دخول ولي الأمر
+    </a>
+</p>
 
 
         </div>
