--- a/public/login.html
+++ b/public/login.html
@@ -27,24 +27,24 @@
                 </div>
                 <button type="submit" class="submit-btn">تسجيل الدخول</button>
             </form>
+            
             <p style="text-align: center; margin-top: 15px;">
                 ليس لديك حساب؟ <a href="signup.html" class="signup-link">إنشاء حساب</a>
             </p>
-<p style="text-align: center; margin-top: 20px; color: #94a3b8;">
-    ولي أمر؟ 
-    <a href="parent-login.html" class="signup-link" style="color: #d4af37; font-weight: bold;">
-        تسجيل دخول ولي الأمر
-    </a>
-</p>
 
-
+            <p style="text-align: center; margin-top: 20px; color: #94a3b8;">
+                ولي أمر؟ 
+                <a href="parent-login.html" class="signup-link" style="color: #d4af37; font-weight: bold;">
+                    تسجيل دخول ولي الأمر
+                </a>
+            </p>
         </div>
     </div>
 
-<footer>
+    <footer>
         <p>Developed by Ahmed Mousa <span class="heart">❤</span></p>
     </footer>
-<script src="auth.js" defer></script>     <!-- في login.html -->
-    
+
+    <script src="auth.js" defer></script>
 </body>
 </html>
