--- a/login.html
+++ b/login.html
@@ -2,12 +2,10 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
     <title>تسجيل الدخول - معهد رعاية الضبعية</title>
     <link rel="stylesheet" href="login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- تحميل CryptoJS من CDN (بدل ملف محلي) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </head>
 <body>
     <header class="main-header">
@@ -29,24 +27,24 @@
                 </div>
                 <button type="submit" class="submit-btn">تسجيل الدخول</button>
             </form>
+            
             <p style="text-align: center; margin-top: 15px;">
-                ليس لديك حساب؟ <a href="register.html" class="signup-link">إنشاء حساب</a>
+                ليس لديك حساب؟ <a href="signup.html" class="signup-link">إنشاء حساب</a>
             </p>
-<p style="text-align: center; margin-top: 20px; color: #94a3b8;">
-    ولي أمر؟ 
-    <a href="parent-login.html" class="signup-link" style="color: #d4af37; font-weight: bold;">
-        تسجيل دخول ولي الأمر
-    </a>
-</p>
 
+            <p style="text-align: center; margin-top: 20px; color: #94a3b8;">
+                ولي أمر؟ 
+                <a href="parent-login.html" class="signup-link" style="color: #d4af37; font-weight: bold;">
+                    تسجيل دخول ولي الأمر
+                </a>
+            </p>
         </div>
     </div>
 
     <footer>
-        <p>Developed by Ahmed Mousa <span class="heart">Heart</span></p>
+        <p>Developed by Ahmed Mousa <span class="heart">❤</span></p>
     </footer>
 
-    <!-- فقط auth.js -->
-    <script src="auth.js"></script>
+    <script src="auth.js" defer></script>
 </body>
-</html> 
+</html>
