--- a/public/login.html
+++ b/public/login.html
@@ -28,15 +28,14 @@
                 <button type="submit" class="submit-btn">تسجيل الدخول</button>
             </form>
             
-            <p style="text-align: center; margin-top: 15px;">
-                ليس لديك حساب؟ <a href="signup.html" class="signup-link">إنشاء حساب</a>
+            <p style="text-align: center; margin-top: 15px; color: #94a3b8; font-size: 1rem;">
+                <span style="color: #000000;">ليس لديك حساب؟</span> 
+                <a href="signup.html" style="color: #1e40af; font-weight: bold;">إنشاء حساب</a>
             </p>
 
-            <p style="text-align: center; margin-top: 20px; color: #94a3b8;">
-                ولي أمر؟ 
-                <a href="parent-login.html" class="signup-link" style="color: #d4af37; font-weight: bold;">
-                    تسجيل دخول ولي الأمر
-                </a>
+            <p style="text-align: center; margin-top: 15px; color: #94a3b8; font-size: 1rem;">
+                <span style="color: #000000;">ولي أمر؟</span> 
+                <a href="parent-login.html" style="color: #1e40af; font-weight: bold;">تسجيل دخول ولي الأمر</a>
             </p>
         </div>
     </div>
