Change redirect URL from index.html to Home.html

--- a/public/parent-login.html
+++ b/public/parent-login.html
@@ -101,7 +101,7 @@
 
                 showToast(`مرحباً ${parentName}، جاري تحويلك لحساب ابنك...`, 'success');
                 setTimeout(() => {
-                    window.location.href = 'index.html'; // أو Home.html - الصفحة الرئيسية
+                    window.location.href = 'Home.html'; // أو Home.html - الصفحة الرئيسية
                 }, 1500);
 
             } catch (error) {
